# CowMono

./: README.md  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  Makefile  tauri.conf.json
src-tauri/migrations/: 20241113051934_init.down.sql  20241113051934_init.up.sql
src-tauri/src/: main.rs
src-tauri/src/entity/: groups.rs  groups_users.rs  items.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  settings.rs  users.rs
